[deconz] Fix missing re-connect on dying websocket connections (#34)
* add watchdog for websocket

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>